--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
       integrity="sha512-JO6JyFPJupQKZf7icgZkHwuq/rAQxH7COqvEd4WdK52AtHPedwHog05T69pIelI69jVN/zZbW6TuHfH2mS8j/Q=="
       crossorigin="anonymous"
     ></script>
+    <script src="icontrigger.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
